--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "prettier/prettier": [
       "error",
       {
-        "singleQuote": true
+        "singleQuote": true,
+        "endOfLine": "auto"
       }
     ]
   },
@@ -19,6 +20,7 @@
         "next/core-web-vitals",
         "plugin:prettier/recommended"
       ],
+
       "parserOptions": {
         "project": "./tsconfig.json"
       },
@@ -26,7 +28,8 @@
         "prettier/prettier": [
           "error",
           {
-            "singleQuote": true
+            "singleQuote": true,
+            "endOfLine": "auto"
           }
         ],
         "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
