--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.8.4",
     "smooth-scroll": "^16.1.3",
@@ -31,6 +32,7 @@
     "@next/bundle-analyzer": "^12.0.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
+    "@types/react-helmet": "^6.1.11",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "autoprefixer": "^10.3.7",
