--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "@heroicons/react": "^1.0.5",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^5.0.0",
+    "markdown-to-jsx": "^7.4.7",
     "next": "^12.0.0",
     "next-seo": "^4.28.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18",
+    "react-dom": "18",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.4",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-react": "^9.0.1",
     "smooth-scroll": "^16.1.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
